--- a/WebAnalisisCSV/templates/index.html
+++ b/WebAnalisisCSV/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/estilo.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='estilo.css') }}">
     <title>Analizador de CSV</title>
 </head>
 <body>
@@ -23,6 +23,6 @@
 
 
 
-<script src="/static/js.js"></script>
+    <script src="{{ url_for('static', filename='js.js') }}"></script>
 </body>
 </html>
