--- a/WebAnalisisCSV/static/estilo.css
+++ b/WebAnalisisCSV/static/estilo.css
@@ -38,3 +38,20 @@ button:active {
     background-color: black;
     transition: 1s;
 }
+
+#divResultados{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+#metrics{
+    background-color: #45a049;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+}
