Commit para analisis de excel
especificiamente el objetivo es poder analizar los xslx de estadoResultado de las instituciones de salud en uruguay

--- a/WebAnalisisCSV/templates/index.html
+++ b/WebAnalisisCSV/templates/index.html
@@ -12,7 +12,7 @@
     <h1 id="tituloTipeado"></h1>
 
     <form id="uploadForm">
-        <input type="file" id="fileInput" name="file" accept=".csv" required hidden>
+        <input type="file" id="fileInput" name="file" accept=".csv, .xlsx" required hidden>
         <label for="fileInput" id="estiloInput">Seleccionar CSV</label>
         <span id="fileName">No se ha seleccionado ningun archivo</span>
         <br><br>
